# pdf-ai-notes

./: .gitignore  CLAUDE.md
hammerspoon/: init.lua
hammerspoon/db/: db.md  notes.db
hammerspoon/modules/: app_watcher.lua  database.lua  preview_poller.lua  utils.lua
python/: config.py  documentation.md  main.py  models.py  prompts.py  pyproject.toml
